# routes/appointment.js
@@ -6,5 +6,13 @@ var AppointmentController = require('../controllers/appointment')
 router.route('/')
     .post(AppointmentController.create)
 
+router.route('/details')
+    .get(AppointmentController.get)
+
+router.route('/agenda/veterinary')
+    .get(AppointmentController.getByVeterinary)
+
+ router.route('/agenda/petowner')
+    .get(AppointmentController.getByPetowner)
 
 module.exports = router;
